--- a/microservice-student.yml
+++ b/microservice-student.yml
@@ -1,11 +1,1 @@
-spring:
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/studentdb
-      
-server:
-   port: 8081
-   
-configuracion:
-   texto: Configurando Ambiente Desarrollo
-   
+spring:  data:    mongodb:      uri: mongodb://localhost:27017/studentdb      server:   port: 8081   configuration:   text: Setting up Development Environment
