Config Eureka-Server

--- a/microservice-teacher.yml
+++ b/microservice-teacher.yml
@@ -6,5 +6,7 @@ spring:
 server:
    port: 8083
    
-configuration:
-   text: Setting up Development Environment
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
