--- a/microservice-family.yml
+++ b/microservice-family.yml
@@ -1,1 +1,1 @@
-spring:  data:    mongodb:      uri: mongodb://localhost:27017/familydb      server:   port: 8082   configuration:   text: Setting up Development Environment
+spring:  data:    mongodb:      uri: mongodb://localhost:27017/familydb      server:   port: 8082   eureka:  client:    service-url:      defaultZone: http://localhost:8761/eureka
