--- a/microservice-student.yml
+++ b/microservice-student.yml
@@ -1,1 +1,1 @@
-spring:  data:    mongodb:      uri: mongodb://localhost:27017/studentdb      server:   port: 8081   configuration:   text: Setting up Development Environment
+spring:  data:    mongodb:      uri: mongodb://localhost:27017/studentdb      server:   port: 8081   eureka:  client:    service-url:      defaultZone: http://localhost:8761/eureka
